Able to launch using Java 17/OpenFX 19